fix images and sections alignement in text descriptions
git-svn-id: https://dev.camptocamp.org/svn/c2corg@146 5b3c568a-86f9-4a59-a47a-7be284f604b4

--- a/web/static/css/main.css
+++ b/web/static/css/main.css
@@ -319,6 +319,7 @@ em.mandatory_asterisk
 img.embedded
 {
   float:left;
+  clear: left;
   margin:5px;
   margin-left:0;
 }
@@ -472,7 +473,8 @@ a.logged_as
   font-weight: bold;
   color: #f93;
   cursor:help;
-  display: inline;
+  display: block;
+  clear: left;
 }
 
 #data_section_container .section_subtitle
